--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">PexelsImageApp</string>
+    <string name="app_name">Pexels Images</string>
     <string name="description">description</string>
 </resources>
